namespace math, string

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,17 @@
 {
   "cSpell.words": [
+    "Exponentiate",
     "Remisa",
     "Yousefvand",
+    "abcdefg",
     "chmod",
     "epub",
     "esac",
     "gmail",
-    "mobi"
+    "mobi",
+    "shellman",
+    "shellmen",
+    "whitespaces",
+    "xargs"
   ]
 }
