--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Alic",
     "Exponentiate",
     "Remisa",
     "Yousefvand",
@@ -11,6 +12,7 @@
     "mobi",
     "shellman",
     "shellmen",
+    "subarray",
     "whitespaces",
     "xargs"
   ]
