ns date, func, crypto, misc, archive, cmd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "Yousefvand",
     "abcdefg",
     "chmod",
+    "czvf",
     "epub",
     "esac",
     "gmail",
@@ -14,6 +15,7 @@
     "shellmen",
     "subarray",
     "whitespaces",
-    "xargs"
+    "xargs",
+    "xzvf"
   ]
 }
