ns rest except fn-fx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,19 +7,42 @@
     "Remisa",
     "Yousefvand",
     "abcdefg",
+    "busybox",
     "chmod",
+    "codename",
     "czvf",
+    "distro",
+    "elif",
     "epub",
     "esac",
+    "glibc",
     "gmail",
+    "icanhazip",
+    "ifconfig",
+    "ipecho",
+    "ipify",
+    "ipinfo",
+    "lscpu",
     "maxdepth",
+    "meminfo",
     "mkdir",
     "mobi",
+    "mtime",
+    "multiline",
+    "setaf",
     "shellman",
     "shellmen",
+    "sitm",
+    "sonatype",
     "subarray",
+    "systemctl",
+    "tput",
+    "uname",
+    "vmlinuz",
+    "whatismyipaddress",
     "whitespaces",
     "xargs",
+    "xenial",
     "xzvf"
   ]
 }
