preparing for ebook publishing :green_book:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,16 +5,20 @@
     "RNFR",
     "RNTO",
     "Remisa",
+    "Shellman",
     "Yousefvand",
     "abcdefg",
+    "backmatter",
     "busybox",
     "chmod",
     "codename",
     "czvf",
     "distro",
+    "dockerd",
     "elif",
     "epub",
     "esac",
+    "frontmatter",
     "glibc",
     "gmail",
     "icanhazip",
@@ -22,7 +26,11 @@
     "ipecho",
     "ipify",
     "ipinfo",
+    "ksoftirqd",
+    "kthreadd",
+    "kworker",
     "lscpu",
+    "mainmatter",
     "maxdepth",
     "meminfo",
     "mkdir",
@@ -30,6 +38,10 @@
     "mtime",
     "multiline",
     "mylib",
+    "pagebreak",
+    "pgrep",
+    "renice",
+    "sched",
     "setaf",
     "shellman",
     "shellmen",
@@ -37,6 +49,7 @@
     "sonatype",
     "subarray",
     "systemctl",
+    "systemd",
     "tput",
     "uname",
     "vmlinuz",
