--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learn how to write professional bash scripts easily using [Shellman](https://marketplace.visualstudio.com/items?itemName=Remisa.shellman) snippet in  [vscode](https://code.visualstudio.com/).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "spellcheck": "./node_modules/.bin/cspell ./**/*"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,6 @@
   },
   "homepage": "https://github.com/yousefvand/shellman-ebook#readme",
   "devDependencies": {
-    "cspell": "^3.1.3"
+    "cspell": "^3.2.1"
   }
 }
