Basics updated :construction:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,15 @@
     "RNFR",
     "RNTO",
     "Remisa",
+    "SIGINT",
     "Shellman",
     "Yousefvand",
     "abcdefg",
     "backmatter",
     "busybox",
     "chmod",
+    "civis",
+    "cnorm",
     "codename",
     "czvf",
     "distro",
@@ -37,7 +40,9 @@
     "mobi",
     "mtime",
     "multiline",
+    "myfunc",
     "mylib",
+    "pacman",
     "pagebreak",
     "pgrep",
     "renice",
