refactoring :wrench: :whale:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "Shellman",
     "Yousefvand",
     "abcdefg",
+    "aybz",
     "backmatter",
     "busybox",
     "chmod",
@@ -16,6 +17,7 @@
     "cnorm",
     "codename",
     "czvf",
+    "defbghic",
     "distro",
     "dockerd",
     "elif",
@@ -45,6 +47,7 @@
     "pacman",
     "pagebreak",
     "pgrep",
+    "pidof",
     "renice",
     "sched",
     "setaf",
