--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shellman-ebook",
-  "version": "2.0.0",
-  "description": "Learn how to write professional bash scripts easily using [Shellman](https://marketplace.visualstudio.com/items?itemName=Remisa.shellman) snippet in  [vscode](https://code.visualstudio.com/).",
+  "version": "2.1.0",
+  "description": "Learn how to write professional shell scripts easily using [Shellman](https://marketplace.visualstudio.com/items?itemName=Remisa.shellman) snippet in  [vscode](https://code.visualstudio.com/).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,6 +26,6 @@
   },
   "homepage": "https://github.com/yousefvand/shellman-ebook#readme",
   "devDependencies": {
-    "cspell": "^4.0.63"
+    "cspell": "^4.1.0"
   }
 }
