preparing to publish v2.4.0 :wrench:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,8 @@
 {
   "cSpell.words": [
-    "Alic",
-    "Exponentiate",
-    "RNFR",
-    "RNTO",
-    "Remisa",
-    "SIGINT",
-    "Shellman",
-    "Yousefvand",
+    "abca",
     "abcdefg",
+    "Alic",
     "aybz",
     "backmatter",
     "busybox",
@@ -16,13 +10,16 @@
     "civis",
     "cnorm",
     "codename",
+    "concat",
     "czvf",
+    "defb",
     "defbghic",
     "distro",
     "dockerd",
     "elif",
     "epub",
     "esac",
+    "Exponentiate",
     "frontmatter",
     "ghic",
     "glibc",
@@ -49,11 +46,16 @@
     "pagebreak",
     "pgrep",
     "pidof",
+    "Remisa",
     "renice",
+    "RNFR",
+    "RNTO",
     "sched",
     "setaf",
     "shellman",
+    "Shellman",
     "shellmen",
+    "SIGINT",
     "sitm",
     "sonatype",
     "subarray",
@@ -67,6 +69,7 @@
     "whitespaces",
     "xargs",
     "xenial",
-    "xzvf"
+    "xzvf",
+    "Yousefvand"
   ]
 }
