command cryptography done 🏁

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "epub",
     "esac",
     "Exponentiate",
+    "Flvd",
     "frontmatter",
     "ghic",
     "glibc",
@@ -72,6 +73,7 @@
     "xargs",
     "xenial",
     "xzvf",
-    "Yousefvand"
+    "Yousefvand",
+    "Zhbm"
   ]
 }
