namespace fn/fx done 🏁

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,11 +16,15 @@
     "defbghic",
     "distro",
     "dockerd",
+    "Dtest",
     "elif",
     "epub",
     "esac",
     "Exponentiate",
+    "Fapi",
+    "Fexample",
     "Flvd",
+    "Fquery",
     "frontmatter",
     "ghic",
     "glibc",
@@ -33,6 +37,8 @@
     "ksoftirqd",
     "kthreadd",
     "kworker",
+    "lastrow",
+    "libname",
     "lscpu",
     "mainmatter",
     "maxdepth",
@@ -41,6 +47,7 @@
     "mobi",
     "mtime",
     "muliplatform",
+    "multichoice",
     "multiline",
     "myfunc",
     "mylib",
@@ -49,8 +56,11 @@
     "pagebreak",
     "pgrep",
     "pidof",
+    "proto",
+    "readarray",
     "Remisa",
     "renice",
+    "retval",
     "RNFR",
     "RNTO",
     "sched",
@@ -61,12 +71,16 @@
     "SIGINT",
     "sitm",
     "sonatype",
+    "startrow",
+    "stty",
     "subarray",
     "systemctl",
     "systemd",
     "tput",
     "uname",
     "urandom",
+    "urldecode",
+    "urlencode",
     "vmlinuz",
     "whatismyipaddress",
     "whitespaces",
