output namespace done 🏁

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "ghic",
     "glibc",
     "gmail",
+    "gsub",
     "icanhazip",
     "ifconfig",
     "ipecho",
@@ -53,6 +54,7 @@
     "myfunc",
     "mylib",
     "nofile",
+    "osis",
     "pacman",
     "pagebreak",
     "pgrep",
@@ -77,6 +79,7 @@
     "subarray",
     "systemctl",
     "systemd",
+    "tolower",
     "tput",
     "uname",
     "urandom",
