namespace string done 🏁

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "abca",
     "abcdefg",
+    "abcdefgcd",
     "Alic",
     "Archlinux",
     "aybz",
@@ -13,6 +14,7 @@
     "codename",
     "concat",
     "czvf",
+    "dcba",
     "defb",
     "defbghic",
     "distro",
