--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
     "ipecho",
     "ipify",
     "ipinfo",
+    "killall",
     "ksoftirqd",
     "kthreadd",
     "kworker",
@@ -61,6 +62,7 @@
     "pagebreak",
     "pgrep",
     "pidof",
+    "pkill",
     "proto",
     "readarray",
     "Remisa",
